--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
             </form>
 
             <p id="date"></p>
-            <p>made by ❤ AVHI</p>
+            <p>made by <span id="red">❤</span> AVHI</p>
         </div>
     </div>
 
