--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Shantell+Sans:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300&display=swap');
-
-#greet-txt {
-    color: aliceblue;
-}
 
 .box-form {
     /* border: 1px solid black; */
@@ -82,9 +79,77 @@
     justify-content: space-between;
     align-items: center;
     gap: .4rem;
+    transition: all 4s ease-in-out;
+}
+
+.main-box>img {
+    transition: all 4s ease-in-out;
+    animation: ani 2s linear infinite alternate;
+}
+
+@keyframes ani {
+    from {
+        transform: scale(0.8);
+    }
+
+    to {
+        transform: scale(1);
+    }
 }
 
 /* styling main */
 #error {
     color: aliceblue;
+}
+
+/* Main CSS style */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Shantell Sans', cursive;
+    width: 100vw;
+    height: 100vh;
+    background-color: #0F2C67;
+    /* color: #191825; */
+    /* color: #3A1078; */
+    color: #18122B;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 0;
+    /* background: -webkit-radial-gradient(50% 0%, ellipse cover, #191825 51%, #2B3467 100%); */
+    /* background: -webkit-linear-gradient(322deg, #70A9FE 23%, #31F6F6 58%, #92F645 84%, #DBF62C 100%); */
+    height: 100vh;
+}
+
+.box {
+    background-color: #89CFFD;
+    border-radius: 1rem;
+    padding: 3rem 2rem;
+    min-width: 400px;
+    min-height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: .2rem .4rem .5rem .1rem rgba(0, 0, 0, .3);
+    position: relative;
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
+}
+
+#red {
+    color: red;
 }
