Trying to fix the bug

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -22,7 +22,7 @@
                 </p>
             </div>
 
-            <form action="/main" method="POST" class="box-form">
+            <form action="/" method="POST" class="box-form">
                 <div class="box-input">
                     <i class="fa-solid fa-location-dot"></i>
                     <!-- <i class="fa-solid fa-thumbtack"></i> -->
