--- a/views/main.ejs
+++ b/views/main.ejs
@@ -26,7 +26,7 @@
                 <div class="box-input">
                     <i class="fa-solid fa-location-dot"></i>
                     <!-- <i class="fa-solid fa-thumbtack"></i> -->
-                    <input type="text" name="location" id="location-inp" placeholder="Enter your location">
+                    <input type="text" name="location" id="location-inp" placeholder="Enter your location" required>
                 </div>
                 <button class="btn">Enter</button>
             </form>
